02-prepare-other-thing/02-route/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookinfo-demo-bookinfo-gateway-route
  namespace: istio-system
spec:
  host: bookinfo-demo-bookinfo-gateway.apps.ocp7.sbx1.kyndryl.net
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
